<resources>
    <string name="app_name">Agenda</string>

    <string name="empty_text">There\'s nothing on your agenda</string>
    <string name="empty_day_text">there\'s nothing on your agenda</string>

    <!-- Custom font identifiers (currently unused). -->
    <string name="pure_bold">Nokia-Pure-Bold.ttf</string>
    <string name="pure_bolditalic">Nokia-Pure-BoldItalic.ttf</string>
    <string name="pure_italic">Nokia-Pure-Italic.ttf</string>
    <string name="pure_regular">Nokia-Pure-Regular.ttf</string>

    <!-- BEGIN configuration activity text values. -->
    <string name="config_time_period_title">Agenda time period</string>
    <string name="one_day">One day</string>
    <string name="one_week">One week</string>
    <string name="two_weeks">Two weeks</string>
    <string name="one_month">One month</string>

    <string name="config_event_lower_line_options_title">Show relative time below event</string>
    <string name="config_text_color_title">Use light theme</string>
    <string name="config_empty_days_title">Allow empty days</string>
    <!-- END configuration activity text values. -->

    <!-- Keys for the config manager. -->
    <string name="config_time_period_key">config_time_period_key</string>
    <string name="config_relative_time_key">config_relative_time_key</string>
    <string name="config_text_color_key">config_text_color_key</string>
    <string name="config_allow_empty_days_key">config_allow_empty_days_key</string>

    <!-- Request codes (string ID is used as unique integer value. -->
    <string name="request_code_update_alarm">request_code_update_alarm</string>
    <string name="request_code_service_restart">request_code_service_restart</string>
</resources>
